Исправления после ревью. Исправлены ошибки линтера. Исправлена ситуация, когда вместо ошибки об отсутствии карточки возвращалась общая ошибка.

--- a/frontend/src/blocks/header/__container/header__container.css
+++ b/frontend/src/blocks/header/__container/header__container.css
@@ -4,11 +4,12 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  
+
 }
 
 @media screen and (max-width: 779px) {
   .header__container {
     width: 90%;
+    flex-direction: column;
   }
 }
