--- a/frontend/src/blocks/header/__email/header__email.css
+++ b/frontend/src/blocks/header/__email/header__email.css
@@ -7,5 +7,10 @@
     line-height: 22px;
     letter-spacing: 0em;
     text-align: right;
+}
 
+@media screen and (max-width: 779px) {
+  .header__email {
+    padding-top: 0;
+  }
 }
