--- a/frontend/src/blocks/header/__user-container/header__user-container.css
+++ b/frontend/src/blocks/header/__user-container/header__user-container.css
@@ -2,5 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    
+}
+
+@media screen and (max-width: 779px) {
+  .header__user-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
