--- a/frontend/src/blocks/profile/__description/profile__description.css
+++ b/frontend/src/blocks/profile/__description/profile__description.css
@@ -18,7 +18,7 @@
     line-height: 17px;
     grid-column-start: 1;
     grid-column-end: 3;
-    text-align: center;
+    text-align: left;
   }
 }
 
